--- a/pages/espacio items.html
+++ b/pages/espacio items.html
@@ -15,9 +15,9 @@
             </aside>
             <aside>
                 <ul>
-                    <li><a href="">Alineado centro</a></li>
-                    <li><a href="">Espacio items</a></li>
-                    <li><a href="">Alrededor de items</a></li>
+                    <li><a href="/pages/alineado centro.html">Alineado centro</a></li>
+                    <li><a href="/pages/espacio items.html">Espacio items</a></li>
+                    <li><a href="/pages/alrededor de items.html">Alrededor de items</a></li>
                     <li><a href="">Items al 100%</a></li>
                     <li><a href="">Alineado Vertical</a></li>
                 </ul>
