--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="/pages/alineado centro.html">Alineado centro</a></li>
                     <li><a href="/pages/espacio items.html">Espacio items</a></li>
-                    <li><a href="">Alrededor de items</a></li>
+                    <li><a href="/pages/alrededor de items.html">Alrededor de items</a></li>
                     <li><a href="">Items al 100%</a></li>
                     <li><a href="">Alineado Vertical</a></li>
                 </ul>
