--- a/pages/alrededor de items.html
+++ b/pages/alrededor de items.html
@@ -29,7 +29,7 @@
         <section id="titulo">
             <h2>Ejemplo de flexbox Complejo</h2>
         </section>
-        <section id="centro">
+        <section id="alrededor">
             <aside class="card">
                 <h3>Primer Articulo</h3>
                 <p>Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. <br> Reiciendis architecto at <br>culpa ducimus ab cum atque, <br> quas, reprehenderit sint laboriosam <br>ut tenetur vero debitis dicta placeat. <br> Illum nam repellat atque <br> doloribus aliquam necessitatibus quas quos! <br> Quam in hic molestiae voluptate <br> pariatur iste soluta veniam, quo cum consectetur? <br> Dolorum, tempora sunt.</p>
