--- a/pages/espacio items.html
+++ b/pages/espacio items.html
@@ -18,7 +18,7 @@
                     <li><a href="/pages/alineado centro.html">Alineado centro</a></li>
                     <li><a href="/pages/espacio items.html">Espacio items</a></li>
                     <li><a href="/pages/alrededor de items.html">Alrededor de items</a></li>
-                    <li><a href="/pages/items100%.html">Items al 100%</a></li>
+                    <li><a href="/pages/itemal100.html">Items al 100%</a></li>
                     <li><a href="/pages/alineadoVertical.html">Alineado Vertical</a></li>
                 </ul>
             </aside>
